# pygbm

./: .readthedocs.yaml  README.md  pyproject.toml  requirements.txt
docs/: requirements.txt
docs/source/: conf.py
dz339_pygbm.egg-info/: PKG-INFO  SOURCES.txt
pygbm/: README.md  cli.py  gbm_simulator.py  pyproject.toml  version.py
pygbm.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
pygbm/pygbm/: gbm_simulator.py  version.py
pygbm/pygbm.egg-info/: PKG-INFO  SOURCES.txt
pygbm/source/: usage.rst
source/: api.rst  conf.py  index.rst  usage.rst
tests/: test.py
