[build-system]
requires = ["setuptools", "wheel", "setuptools_scm"]  # Build requirements
build-backend = "setuptools.build_meta"

[project]
name = "pygbm" # name of the package must match the core folder name
dynamic = ["version"]
description = "A python package to create simulations of geometric browninan motion."
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
authors = [
    { name = "Dario Zela", email = "dz339@cam.ac.uk" },
]
keywords = ["Geometric Brownian Motion", "physics", "simualtion"]
classifiers = [
    "Development Status :: 1 - Beta",
    "Intended Audience :: Physicists",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries"
]

# Runtime dependencies
dependencies = [
    "numpy",
    "argparse",
    "matplotlib"
]

[project.urls]
"Documentation" = "https://your-readthedocs-url-here"
"Source" = "https://github.com/Dario-Zela/pygbm"
"Issues" = "https://github.com/Dario-Zela/pygbm/issues"

[project.scripts]
pygbm = "pygbm.cli:main"

[tool.setuptools_scm]
write_to = "pygbm/version.py"  # Where to write the dynamic version

[tool.setuptools.packages.find]
where = ["."]